--- a/trip/trip/test/fixtures/addresses.yml
+++ b/trip/trip/test/fixtures/addresses.yml
@@ -1,17 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  street: MyString
-  state: MyString
-  city: MyString
-  country: MyString
-  region: MyString
-  zip: MyString
+  location: one
 
 two:
-  street: MyString
-  state: MyString
-  city: MyString
-  country: MyString
-  region: MyString
-  zip: MyString
+  location: two
