--- a/trip/trip/test/fixtures/locations.yml
+++ b/trip/trip/test/fixtures/locations.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  loc_name: MyString
+  trip1: one
 
 two:
-  loc_name: MyString
+  trip1: two
